DuPont DevSB/src/objects/OpportunityLineItem.object
<CustomObject>
    <fields>
        <fullName>ClonedId__c</fullName>
        <description>holds the id of the record this was cloned from as text.</description>
        <label>ClonedId</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Competition__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Main Competition we are facing for this Product in this Opportunity</description>
        <label>Competition</label>
        <referenceTo>Competition__c</referenceTo>
        <relationshipLabel>Competition for Opportunity</relationshipLabel>
        <relationshipName>OpportunityCompetition</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Legacy_One_DuPont_SFID__c</fullName>
        <description>This field is populated with the legacy One DuPont SF ID and was used during the split to map related records during the split and insert process to maintain the migrated record’s parent child record relationships.</description>
        <externalId>true</externalId>
        <inlineHelpText>This is the pre-split original 18 digit Salesforce ID of this record that came from the original One Dupont Salesforce instance before the business units were separated.  Its is case insensitive and unique.</inlineHelpText>
        <label>Legacy One DuPont SFID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Method__c</fullName>
        <description>Method used for this product</description>
        <label>Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Other</fullName>
                    <default>true</default>
                    <label>Other</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>fPackaging_Type__c</fullName>
        <description>This is the Packaging Type for Product related to the opportunity

(10/12/2017) - Removed &quot;Date_Entered__c&quot; reference as part of remediation effort.</description>
        <formula>NULL</formula>
        <label>Packaging Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fProduct_L5__c</fullName>
        <description>Product L5 from the Product Record</description>
        <formula>PricebookEntry.Product2.Product_L5__c</formula>
        <inlineHelpText>Product L5 from the Product Record</inlineHelpText>
        <label>Product L5</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fUOM_Code__c</fullName>
        <description>This is the Unit of Measure code from the Product</description>
        <formula>TEXT( PricebookEntry.Product2.Unit_Of_Measure_Code__c)</formula>
        <inlineHelpText>This is the Unit of Measure code from the Product</inlineHelpText>
        <label>UOM Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fUnit_of_Measure__c</fullName>
        <description>This is the Unit of Measure from the Product</description>
        <formula>TEXT( PricebookEntry.Product2.Unit_Of_Measure__c )</formula>
        <inlineHelpText>This is the Unit of Measure from the Product</inlineHelpText>
        <label>Unit of Measure</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Added_To_Project__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates this was previously added to a project during the create project process. If checked it will not be picked up in the next create project</description>
        <label>Added To Project</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__IsServicesProductLine__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsServicesProductLine</label>
        <type>Checkbox</type>
    </fields>
    <validationRules>
        <fullName>Opp_Product_Line_Description_is_Require</fullName>
        <active>true</active>
        <description>Requires a value in the Line description field before a Opportunity Product record can be saved for the specified opportunity record type(s).</description>
        <errorConditionFormula>AND ( 
Opportunity.RecordType.DeveloperName = &quot;DEC_PVAM_Opportunity&quot;, 
ISBLANK( Description ) 
)</errorConditionFormula>
        <errorDisplayField>Description</errorDisplayField>
        <errorMessage>Please provide the product code in the Line Description field.</errorMessage>
    </validationRules>
</CustomObject>